# src/test_main.py
@@ -4,19 +4,25 @@ import main
 import starlette.testclient
 
 client = starlette.testclient.TestClient(main.app)
+ner_body = {
+    'sections': [
+        'Net income was $9.4 million compared to the prior year of $2.7 '
+        + 'million. Google is a big company.',
+        'Revenue exceeded twelve billion dollars, with a loss of $1b.'
+    ]
+}
 
 
-def test_ner():
-    body = {
-        'sections': [
-            'Net income was $9.4 million compared to the prior year of $2.7 '
-            + 'million. Google is a big company.',
-            'Revenue exceeded twelve billion dollars, with a loss of $1b.'
-        ]
-    }
-    response = client.post('/ner', json=body)
+def test_ner_sense2vec_enabled():
+    response = client.post('/ner', json={**ner_body, 'sense2vec': True})
     assert response.status_code == 200
-    with open('src/outputs/ner.json') as f:
+    with open('src/outputs/ner/sense2vec_enabled.json') as f:
+        assert response.json() == json.load(f)
+
+
+def test_ner_sense2vec_disabled():
+    response = client.post('/ner', json=ner_body)
+    with open('src/outputs/ner/sense2vec_disabled.json') as f:
         assert response.json() == json.load(f)
 
 
